improved contrast and colors, and resolved commnet time alignment

--- a/Client/src/styles/tailwind.css
+++ b/Client/src/styles/tailwind.css
@@ -13,7 +13,7 @@
   /* Background Colors */
   --color-bg-primary: var(--color-zinc-950);
   --color-bg-secondary: oklch(21.6% .006 56.043);
-  --color-bg-tertiary: color-mix(in oklab, var(--color-stone-800) 40%, transparent);
+  --color-bg-tertiary: color-mix(in oklab, var(--color-stone-800) 50%, transparent);
   --color-bg-quaternary: color-mix(in oklab, var(--color-zinc-950) 40%, transparent);
 
   /* Text Colors */
